--- a/css/style.css
+++ b/css/style.css
@@ -23,28 +23,25 @@ ul, ol{
     background: url("../img/ILLUSTRATION.png") right top no-repeat;
     background-size: 60%;
 }
-.logo{
-    padding-top: 80px;
+.bg-light{
+    background: transparent !important;
 }
-.header-links{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 80px;
+.navbar{
+    padding-top: 60px !important;
 }
-.header-links li{
-    margin-top: 0px;
+.banner .nav-link{
+    color: #fff !important;
+    margin-right: 40px;
 }
-.header-links li a{
-    color: #fff;
-}
-.header-links li .btn{
+.navbar-collapse form .btn{
     font-size: 14px;
     background: #fff;
     color: #14215e;
     padding: 3px 25px;
     border-radius: 6px;
+    outline: none;
 }
-.header-links li .btn:hover{
+.navbar-collapse form .btn:hover{
     background: transparent;
     border: 1px solid#fff;
     color: #fff;
@@ -153,6 +150,7 @@ ul, ol{
 .news{
     background: url("../img/card-bg-1.png") center left no-repeat, url("../img/card-bg-2.png") center right no-repeat;
     background-size: 15%;
+    margin-bottom: 190px;
 }
 .news-header{
     margin-top: 80px;
@@ -161,22 +159,22 @@ ul, ol{
 .news-header h2{}
 .bg-1{
     background: url("../img/card-img-1.png") center center no-repeat;
-    width: 425px;
-    height: 752px;
 }
 .bg-2{
     background: url("../img/card-img-2.png") center center no-repeat;
-    width: 425px;
-    height: 752px;
 }
 .bg-3{
     background: url("../img/card-img-3.png") center center no-repeat;
-    width: 425px;
-    height: 752px;
+}
+.card-img{
+    width: 355px;
+    height: 684px;
+    border-radius: 20px;
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
 }
 .card-img .news-container{
     width: 350px;
-    padding: 260px 0px 0px 65px;
+    padding: 260px 0px 0px 20px;
 }
 .card-img .news-container h4{
     font-weight: bold;
@@ -194,11 +192,10 @@ ul, ol{
 
 /* ----- Footer section css codes starts ----- */
 .blue-bg-form{
-    background: #3072c0 url("../img/form-bg.png") center left no-repeat;
+    background: #3072c0 url("../img/form-bg.png") center left -5px no-repeat;
     background-size: 53%;
-    width: 101%;
+    width: 100%;
     border-radius: 15px;
-    margin-left: 3%;
     display: block;
 }
 .blue-bg-form h4{
@@ -247,12 +244,6 @@ ul, ol{
     background-size: cover;
     margin-top: -20%;
 }
-.extra-gap{
-    margin: 0px 23px;
-}
-.extra-gap-last{
-    max-width: 100% !important;
-}
 .footer-inner{
     margin-top: 350px;
     margin-bottom: 50px;
@@ -296,3 +287,248 @@ ul, ol{
     background: #2376cf;
     color: #fff;
 }
+
+/* ------ Media Queries Codes for Responsiveness below ------- */
+@media (min-width: 768px) and (max-width: 1024px) {
+  
+    .navbar{
+        padding-top: 30px !important;
+    }
+    .banner .nav-link{
+        color: #000 !important;
+        margin-right: 40px;
+    }
+    .banner .nav-link::after{
+        content: '';
+        background: rgba(0,0,0,.1);
+        height: 1px;
+        width: 91%;
+        position: absolute;
+        left: 14px;
+        margin: 24px 0px;
+    }
+    .navbar-collapse form .btn{
+        background: #14215e;
+        color: #fff;
+        outline: none;
+    }
+    .navbar-collapse form .btn:focus{
+        background: #fff;
+        border: 1px solid#14215e;
+        color: #14215e;
+    }
+    .navbar-light .navbar-toggler {
+        color: rgba(0,0,0,.5);
+        border-color: rgb(233 236 239 / 40%);
+    }
+    .banner-inner{
+        margin: 60px 0px 0px 10px;
+        width: 175%;
+        padding-bottom: 0px;
+    }
+    .banner-inner p{
+        margin-top: 20px;
+    }
+    .banner-inner .btn{
+        margin-top: 30px;
+    }
+    .feature-box{
+        width: 200%;
+    }
+    .image-02{
+        padding-left: 270px;
+    }
+    .image-03{
+        padding-left: 30px;
+    }
+    .f2{
+        margin-left: 40px;
+    }
+    .feature-button .btn {
+        margin-right: -200px;
+    }
+    .statistics-header h2{
+        font-size: 25px;
+    }
+    .card-img {
+        width: 225px;
+    }
+    .card-img .news-container {
+        width: 210px;
+    }
+    .card-img .news-container h4{
+        font-size: 18px;
+    }
+    .card-img .news-container p{
+        font-size: 12px;
+        margin-bottom: 40px;
+    }
+    .news{
+        margin-bottom: 90px;
+    }
+    .blue-bg-form {
+        background: #3072c0 url(../img/form-bg.png) center left -135px no-repeat;
+        background-size: 93%;
+    }
+    .blue-bg-form form .name {
+        width: 60%;
+    }
+    .footer-inner {
+        margin-top: 210px;
+    }
+
+  }
+  
+  /* 
+    ##Device = Tablets, Ipads (landscape)
+    ##Screen = B/w 768px to 1024px
+  */
+  
+  @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+    
+    
+    
+  }
+  
+  /* 
+    ##Device = Low Resolution Tablets, Mobiles (Landscape)
+    ##Screen = B/w 481px to 767px
+  */
+  
+  @media (min-width: 481px) and (max-width: 767px) {
+    
+    
+    
+  }
+  
+  /* 
+    ##Device = Most of the Smartphones Mobiles (Portrait)
+    ##Screen = B/w 320px to 479px
+  */
+  
+  @media (min-width: 320px) and (max-width: 480px) {
+    
+    .navbar{
+        padding-top: 30px !important;
+    }
+    .banner .nav-link{
+        color: #000 !important;
+        margin-right: 40px;
+    }
+    .banner .nav-link::after{
+        content: '';
+        background: rgba(0,0,0,.1);
+        height: 1px;
+        width: 91%;
+        position: absolute;
+        left: 14px;
+        margin: 24px 0px;
+    }
+    .navbar-collapse form .btn{
+        background: #14215e;
+        color: #fff;
+        outline: none;
+    }
+    .navbar-collapse form .btn:focus{
+        background: #fff;
+        border: 1px solid#14215e;
+        color: #14215e;
+    }
+    .navbar-light .navbar-toggler {
+        color: rgba(0,0,0,.5);
+        border-color: rgb(233 236 239 / 40%);
+    }
+    .banner-inner{
+        margin: 150px 0px 0px 10px;
+        width: 100%;
+        padding-bottom: 40px;
+    }
+    .banner-inner p{
+        margin-top: 20px;
+    }
+    .banner-inner .btn{
+        margin-top: 30px;
+    }
+    .features-header-inner h2 {
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    .feature-box {
+        padding: 35px;
+        width: 101%;
+        border-radius: 15px;
+    }
+    .f2 {
+        margin-left: 50px;
+        padding: 25px;
+        width: 86%;
+    }
+    .image-02 {
+        padding-left: 50px;
+        margin-top: 45px;
+    }
+    .image-03 {
+        margin-top: 40px;
+    }
+    .feature-button .btn {
+        margin-top: 80px;
+        margin-right: 80px;
+    }
+    .statistics-container h2{
+        font-size: 45px;
+    }
+    .statistics-container p{
+        font-size: 17px;
+    }
+    .statistics-container::after{
+        content: '';
+        background: rgba(0,0,0,.1);
+        height: 1px;
+        width: 82%;
+        position: absolute;
+        left: 30px;
+        margin: -10px 0px;
+    }
+
+    .card-img {
+    width: 350px;
+    margin-bottom: 40px;
+    }
+    .blue-bg-form {
+        background: #3076C0 url(../img/form-bg.png) center left -285px no-repeat;
+        background-size: 160%;
+    }
+    .blue-bg-form h4 {
+        padding-top: 80px;
+        padding-bottom: 30px;
+        font-size: 23px;
+    }
+    .blue-bg-form form .name {
+        width: 80%;
+        margin-bottom: 20px;
+    }
+    .news {
+        margin-bottom: 90px;
+    }
+    .first-footer{
+        margin-top: 120px !important;
+    }
+    .footer-inner .social-icons {
+        margin: 40px 0px 40px 28%;
+    }
+    .footer-inner{
+        margin-top: -40px;
+        text-align: center;
+    }
+    .footer-inner h5 {
+        margin-top: 30px;
+        margin-bottom: 20px;
+        font-size: 30px;
+    }
+    .footer-inner p {
+        font-size: 20px;
+    }
+    .footer-inner a {
+        font-size: 20px;
+    }
+  }
